stylesheet.css
 body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }

  main {
    flex: 1 0 auto;
  }
 
.disclaimer{
  font-size: 8pt;
}

.responsive-img-height {
  height: 100%;
  width: auto;
}

.price {
  font-size: 18pt;
  font-weight: 300;
}
.flex-horizontal {
  display: -webkit-flex;
  display: flex;
  padding: 24px;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.flex-shop {
  display: -webkit-flex;
  display: flex;
  padding: 24px;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.flex-element {
  flex: 1;
  margin-left: 1em;
}

.flex-element:first-child {
  margin-left: 0;
}

.product-img {
  max-width: 20em;
  margin-left: auto;
  margin-right: auto;
}

#logo {
  hight: auto;
}

#main-header {
    background-image: url("img/header.jpg");
    background-size: cover;
    background-position: center;
    width: 100%;
    margin-bottom: 1em;
}
#small-header {
  background-image: url("img/header.jpg");
  background-size: cover;
  background-position: center;
  width: 100%;
  margin-bottom: 1em;
}
  
/* MED AND UP */
@media screen and (min-width: 601px) {
  #main-header {
    height: 25em;
  }
  #small-header {
    height: 9em;
  }
}

/* SMALL */
@media screen and (max-width: 600px) {
  #main-header {
    height: 20em;
  }
  #small-header {
    height: 9em;
  }

